Fix ComboBox: truncate long placeholder text with ellipsis

--- a/src/components/combo_box/combo_box_input/_combo_box_placeholder.scss
+++ b/src/components/combo_box/combo_box_input/_combo_box_placeholder.scss
@@ -5,4 +5,11 @@
   line-height: $euiSizeXL;
   color: $euiColorMediumShade;
   margin-bottom: 0 !important; // sass-lint:disable-line no-important
+
+  // Truncate placeholder with ellipsis if it's too long
+  // https://css-tricks.com/almanac/properties/t/text-overflow/
+  width: calc(100% - 28px); // 28px is a quick fix to give space for the combobox arrow
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
